<resources>
    <string name="app_name">Quiz-Application</string>
    <string name="question_text">Question text</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="your_score">Your Score: %1$d / %2$d</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="please_select_an_answer">Please select an answer</string>
    <string name="timer_text">Time Left: %d</string>
    <string name="leaderboard_title">High Scores</string>
</resources>